# mnist-polar

./: README.md  pyproject.toml
notebooks/: figures.ipynb  train.ipynb
src/polar_mnist/: io.py  model.py  transforms.py
