[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polar-mnist"
version = "0.1.0"
description = "Experiments classifying MNIST in 1D with polar aggregation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "lightning[extra]>=2.5.0.post0",
    "matplotlib>=3.10.0",
    "numpy>=2.1.3",
    "opencv-python>=4.11.0.86",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]
